force-app/main/default/main/default/objects/Medications__c/Medications__c.object-meta.xml
<CustomObject>
    <label>Medication</label>
    <nameField>
        <label>Medications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>