force-app/main/default/main/default/objects/Medications__c/fields/Medicines_Suggested_By_Doctors__c.field-meta.xml
<CustomField>
    <fullName>Medicines_Suggested_By_Doctors__c</fullName>
    <label>Medicines Suggested By Doctors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>