force-app/main/default/main/default/objects/Medications__c/fields/Recommended_Revisit_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Revisit_Date__c</fullName>
    <label>Recommended Re-visit Date</label>
    <type>Date</type>
</CustomField>