force-app/main/default/main/default/objects/Medications__c/fields/Situation_of_the_Patient__c.field-meta.xml
<CustomField>
    <fullName>Situation_of_the_Patient__c</fullName>
    <label>Situation of the Patient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicine Process Ongoing.</fullName>
            </value>
            <value>
                <fullName>Patient is Fit</fullName>
            </value>
            <value>
                <fullName>Situation Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>