force-app/main/default/main/default/objects/Medications__c/fields/Suggestion_By_Doctors__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_By_Doctors__c</fullName>
    <label>Suggestion By Doctors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>